Otp proper added

--- a/Anti_Money_Laundering/src/main/resources/application.properties
+++ b/Anti_Money_Laundering/src/main/resources/application.properties
@@ -23,8 +23,8 @@ recaptcha.secret=6LcRxtkrAAAAADuYyOdkE7-agvG_olqN-mUP0BO7
 recaptcha.url=https://www.google.com/recaptcha/api/siteverify
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/aml_database?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/aml?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Dhyey1212
+spring.datasource.password=Fggv@676
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
