--- a/Anti_Money_Laundering/src/main/resources/application.properties
+++ b/Anti_Money_Laundering/src/main/resources/application.properties
@@ -25,6 +25,6 @@ recaptcha.url=https://www.google.com/recaptcha/api/siteverify
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/aml?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Fggv@676
+spring.datasource.password=Dhyey1212
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
